@@ -28,7 +28,7 @@ public class KnownIssue implements TestFilter {
     /** The Constant KNOWN_FAILING_TESTS. */
     public static final Set<String> KNOWN_FAILING_TESTS = new HashSet<>();
     /** The Constant SKIP_KNOWN_ISSUES. */
-    public static final boolean SKIP_KNOWN_ISSUES = new Boolean(System.getProperties()
+    public static final boolean SKIP_KNOWN_ISSUES = Boolean.valueOf(System.getProperties()
             .getProperty("skip_known_issues"));
 
     /** {@inheritDoc} */
